apollo-router/src/plugins/telemetry/config_new/supergraph/snapshots/apollo_router__plugins__telemetry__config_new__supergraph__events__tests__supergraph_events_on_graphql_error@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/supergraph/events.rs
expression: yaml
---
- fields:
    kind: my.response_event
  level: WARN
  message: my response event message
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      name: supergraph
      otel.kind: INTERNAL
