apollo-router/src/plugins/telemetry/config_new/supergraph/snapshots/apollo_router__plugins__telemetry__config_new__supergraph__events__tests__supergraph_events_with_request_header_response_condition@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/supergraph/events.rs
expression: yaml
---
- fields:
    kind: my.response.event
  level: INFO
  message: Response triggered by request header
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      name: supergraph
      otel.kind: INTERNAL
